--- a/Demo/Demo_2013.vcxproj.filters
+++ b/Demo/Demo_2013.vcxproj.filters
@@ -8,6 +8,10 @@
     <ClCompile Include="util\FFmpeg.cpp">
       <Filter>util</Filter>
     </ClCompile>
+    <ClCompile Include="massspringsystem.cpp" />
+    <ClCompile Include="rigidBody.cpp" />
+    <ClCompile Include="rigidBodySystem.cpp" />
+    <ClCompile Include="fluidSimulationSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="util">
@@ -21,6 +25,10 @@
     <ClInclude Include="util\FFmpeg.h">
       <Filter>util</Filter>
     </ClInclude>
+    <ClInclude Include="massspringsystem.h" />
+    <ClInclude Include="rigidBody.hpp" />
+    <ClInclude Include="rigidBodySystem.hpp" />
+    <ClInclude Include="fluidSimulationSystem.hpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="effect.fx" />
